# rspl

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yaml  ci.yaml
examples/: hics.md  hics.rs  pelican.md  pelican.rs  rspl_heapless.md  rspl_heapless.rs
src/: combinators.rs  lib.rs
src/streams/: infinite_lists.rs  mod.rs  overeager_receivers.rs
tests/: basic.rs  demands.rs  events.rs  load.rs
