[package]
name = "rspl"
version = "0.1.1"
edition = "2021"
description = "A stream processor language."
documentation = "https://docs.rs/rspl"
readme = "README.md"
repository = "https://github.com/aronpaulson/rspl"
license = "GPL-3.0-or-later"
keywords = ["language", "stream-processing", "event-driven", "demand-driven", "state-machine"]
categories = ["asynchronous", "concurrency", "compilers", "no-std"]

[dependencies]
crossbeam = { version = "0.8", optional = true }

[features]
default = ["std"]
std = ["crossbeam"]

[[test]]
name = "basic"
required-features = ["std"]

[[test]]
name = "demands"
required-features = ["std"]

[[test]]
name = "events"
required-features = ["std"]

[[test]]
name = "load"
required-features = ["std"]

[[example]]
name = "hics"

[[example]]
name = "pelican"

[[example]]
name = "rspl_heapless"
